dist_man1_MANS=

if BUILD_FUJICOIND
  dist_man1_MANS+=fujicoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=fujicoin-qt.1
endif

if BUILD_FUJICOIN_CLI
  dist_man1_MANS+=fujicoin-cli.1
endif

if BUILD_FUJICOIN_TX
  dist_man1_MANS+=fujicoin-tx.1
endif

if BUILD_FUJICOIN_UTIL
  dist_man1_MANS+=fujicoin-util.1
endif

if ENABLE_WALLET
if BUILD_FUJICOIN_WALLET
  dist_man1_MANS+=fujicoin-wallet.1
endif
endif
